[tool.poetry]
name = "savingprivacypolicy"
version = "0.1.0"
description = ""
authors = ["snehsuresh <snehsuresh02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
huggingface-hub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
